--- a/greenfield.app/layouts/index.html
+++ b/greenfield.app/layouts/index.html
@@ -13,48 +13,30 @@
   </div>
   <div id="action-buttons">
     <a class="button primary big" href="https://preview.greenfield.app"
-       onclick="_gaq.push(['_trackEvent', 'greenfield', 'preview']);" target="_blank">Live Demo</a>
+       onclick="_gaq.push(['_trackEvent', 'greenfield', 'preview']);" target="_blank">Live Demo [BETA]</a>
     <a class="button outline big" href="https://github.com/udevbe/greenfield"
        onclick="_gaq.push(['_trackEvent', 'greenfield', 'github']);" target="_blank">View Source</a>
   </div>
   <div id="kube-features">
         <div class="row gutters">
             <div class="col col-4 item">
-                <figure>
-                    <img alt="Baseline" height="48" src="{{ "/img/Google_Material_Design_Logo.svg" | relURL }}" width="48">
-                </figure>
-                <h3>Material Design</h3>
-                <p>Greenfield uses Material Design to unify the user experience on mobile and desktop.</p>
+<!--                <figure>-->
+                <!--                    <img alt="Baseline" height="48" src="{{ "/img/Google_Material_Design_Logo.svg" | relURL }}" width="48">-->
+                <!--                </figure>-->
+                <h3>Ubiquitous computing</h3>
+                <p>Greenfield is nothing less than world's the first true cloud desktop. A login. A browser. That's all you need to access all of your apps and data. Any device. Anytime. Anywhere.</p>
             </div>
             <div class="col col-4 item">
-                <figure>
-                    <img alt="Baseline" height="48" src="{{ "/img/Web_Assembly_Logo.svg" | relURL }}" width="48">
-                </figure>
-                <h3>WebAssembly</h3>
-                <p>When performance is non-negotiable, Greenfield lets WebAssembly to the talking.</p>
-            </div>
-            <div class="col col-4 item">
-                <figure>
-                    <img alt="Baseline" height="48" src="{{ "/img/HTML5_Performance_512.png" | relURL }}" width="48">
-                </figure>
-                <h3>WebWorker</h3>
-                <p>Greenfield doesn't wait and freeze when things are hard, it let's a specialist do the job instead.</p>
-            </div>
-        </div>
-        <div class="row gutters">
-            <div class="col col-4 item">
-                <h4>Mobile-first</h4>
-                <p>Greenfield's interface is mobile-first and fully embraces latest and greatest tech.</p>
-            </div>
-            <div class="col col-4 item">
-                <h4>Cross-browser</h4>
-                <p>Greenfield works in the most commonly used browsers, both desktop and mobile.</p>
+<!--                <figure>-->
+                <!--                    <img alt="Baseline" height="48" src="{{ "/img/Web_Assembly_Logo.svg" | relURL }}" width="48">-->
+                <!--                </figure>-->
+                <h3>Latest and greatest tech.</h3>
+                <p>WebAssembly, WebGL, WebWorker... Performance is non-negotiable. Greenfield is at the boundaries of todays technology to deliver nothing less than the best experience.</p>
             </div>
             <div class="col col-4 item">
                 <h4>License</h4>
                 <p>Greenfield is licensed under <a href="https://opensource.org/licenses/AGPL-3.0">AGPL-3.0</a>.<br>
             </div>
-        </div>
     </div>
 </div>
 {{ end }}
