--- a/greenfield.app/layouts/index.html
+++ b/greenfield.app/layouts/index.html
@@ -20,20 +20,23 @@
   <div id="kube-features">
         <div class="row gutters">
             <div class="col col-4 item">
-<!--                <figure>-->
-                <!--                    <img alt="Baseline" height="48" src="{{ "/img/Google_Material_Design_Logo.svg" | relURL }}" width="48">-->
-                <!--                </figure>-->
+                <figure>
+                    <img alt="Baseline" height="48" src="{{ "/img/cloud-rainbow.svg" | relURL }}" width="100">
+                 </figure>
                 <h3>Ubiquitous computing</h3>
                 <p>Greenfield is nothing less than world's the first true cloud desktop. A login. A browser. That's all you need to access all of your apps and data. Any device. Anytime. Anywhere.</p>
             </div>
             <div class="col col-4 item">
-<!--                <figure>-->
-                <!--                    <img alt="Baseline" height="48" src="{{ "/img/Web_Assembly_Logo.svg" | relURL }}" width="48">-->
-                <!--                </figure>-->
-                <h3>Latest and greatest tech.</h3>
-                <p>WebAssembly, WebGL, WebWorker... Performance is non-negotiable. Greenfield is at the boundaries of todays technology to deliver nothing less than the best experience.</p>
+                <figure>
+                    <img alt="Baseline" height="48" src="{{ "/img/HTML5_logo.svg" | relURL }}" width="100">
+                </figure>
+                <h3>Latest and greatest tech</h3>
+                <p>WebAssembly, WebGL, WebWorker... Performance is non-negotiable. Greenfield is at the boundaries of today's technology to deliver the best possible experience.</p>
             </div>
             <div class="col col-4 item">
+                <figure>
+                    <img alt="Baseline" height="48" src="{{ "/img/Copyleft.svg" | relURL }}" width="100">
+                </figure>
                 <h4>License</h4>
                 <p>Greenfield is licensed under <a href="https://opensource.org/licenses/AGPL-3.0">AGPL-3.0</a>.<br>
             </div>
