remove blog section for now

--- a/greenfield.app/layouts/index.html
+++ b/greenfield.app/layouts/index.html
@@ -13,9 +13,9 @@
   </div>
   <div id="action-buttons">
     <a class="button primary big" href="https://preview.greenfield.app"
-       onclick="_gaq.push(['_trackEvent', 'greenfield', 'preview']);" target="_blank">Live Demo [BETA]</a>
+       onclick="ga('send','event', 'greenfield', 'preview');" target="_blank">Live Demo [BETA]</a>
     <a class="button outline big" href="https://github.com/udevbe/greenfield"
-       onclick="_gaq.push(['_trackEvent', 'greenfield', 'github']);" target="_blank">View Source</a>
+       onclick="ga(['send','event', 'greenfield', 'github']);" target="_blank">View Source</a>
   </div>
   <div id="kube-features">
         <div class="row gutters">
