--- a/greenfield.app/layouts/_default/list.html
+++ b/greenfield.app/layouts/_default/list.html
@@ -4,9 +4,9 @@
 {{ define "main" }}
 
 <div id="hero" class="wrap">
-  <h1>Developers Musings</h1>
+  <h1>Greenfield Tech Blog</h1>
     <p>Things that were, things that are, and some things... that have not yet come to pass.
-<!--        <br> <a href="https://twitter.com/{{.Site.Params.twitter}}">Follow us on Twitter</a>-->
+        <!--        <br> <a href="https://twitter.com/{{.Site.Params.twitter}}">Follow us on Twitter</a>-->
     </p>
 </div>
 <ul id="posts">
@@ -15,7 +15,7 @@
   <section>{{ partial "pagination" .}}</section>
 </ul>
 
-{{ end }} 
-{{ define "footer" }} 
-  {{ partial "footer" . }} 
+{{ end }}
+{{ define "footer" }}
+{{ partial "footer" . }}
 {{ end }}
